tests/purs/failing/NonAssociativeError.out
Error 1 of 2:

  at tests/purs/failing/NonAssociativeError.purs:7:10 - 7:12 (line 7, column 10 - line 7, column 12)

    Cannot parse an expression that uses multiple instances of the non-associative operator [33mData.Eq.(==)[0m.
    Use parentheses to resolve this ambiguity.


  See https://github.com/purescript/documentation/blob/master/errors/NonAssociativeError.md for more information,
  or to contribute content related to this error.

Error 2 of 2:

  at tests/purs/failing/NonAssociativeError.purs:8:19 - 8:21 (line 8, column 19 - line 8, column 21)

    Cannot parse an expression that uses multiple non-associative operators of the same precedence:

      [33mData.Eq.(/=)[0m
      [33mData.Eq.(==)[0m

    Use parentheses to resolve this ambiguity.


  See https://github.com/purescript/documentation/blob/master/errors/NonAssociativeError.md for more information,
  or to contribute content related to this error.

